--- a/src/main/resources/templates/factura/ver.html
+++ b/src/main/resources/templates/factura/ver.html
@@ -6,10 +6,10 @@
 </head>
 <body>
 	<h1 th:text="${titulo}"></h1>
-	<h3 th:text="${factura.descripcion}"></h3>
+	<h3 th:utext="${factura.descripcion}"></h3>
 	<div>
 		Cliente: <span
-			th:text="${factura.cliente.nombre +' ' + factura.cliente.apellido}"></span>
+			th:utext="${factura.cliente.nombre +' ' + factura.cliente.apellido}"></span>
 	</div>
 	<h4>Detalle de la factura</h4>
 	<table>
